--- a/media/assets/frontend/locales/zh-CN/dtable.json
+++ b/media/assets/frontend/locales/zh-CN/dtable.json
@@ -60,10 +60,10 @@
   "cells_selected": "个单元格被选择",
   "Sum": "总和",
   "Filter": "过滤器",
-  "1_Filter": "1个过滤条件",
+  "1_Filter": "1 个过滤条件",
   "Filters": "个过滤条件",
   "Hide_Columns": "隐藏",
-  "1_Hidden_Column": "1列被隐藏",
+  "1_Hidden_Column": "1 列被隐藏",
   "Hidden_Columns": "列被隐藏",
   "Sort": "排序",
   "Add_Filter": "添加一个过滤器",
@@ -134,6 +134,7 @@
   "is_not": "不是",
   "is_empty": "是空",
   "is_not_empty": "不是空",
+  "include_me": "包括我",
   "contains": "包括",
   "does_not_contain": "不包括",
   "equal": "等于",
@@ -199,9 +200,14 @@
   "All_Statistics": "所有统计表",
   "Chart_settings": "参数设置",
   "Simple_counting": "简单计数",
-  "Advanced_count": "高级计数",
+  "Advanced_count": "高级",
   "This_method_is_not_supported_for_the_time_being": "暂不支持该方法的统计.",
   "Amount": "数量",
   "null": "空",
-  "Share": "共享"
+  "Share": "共享",
+  "Default_View": "默认视图",
+  "External_sharing_link": "外部共享链接",
+  "The_share_link_has_been_copied": "共享链接已被复制。",
+  "Failed_to_get_share_link": "获取共享链接失败。",
+  "Server_is_not_connected_Operation_will_be_sent_to_server_later": "服务器未连接。 操作稍后将发送到服务器。"
 }
