--- a/media/assets/frontend/locales/en/dtable.json
+++ b/media/assets/frontend/locales/en/dtable.json
@@ -9,6 +9,7 @@
   "Duplicate_Row": "Duplicate Row",
   "Delete_Row": "Delete Row",
   "Delete_Rows": "Delete Rows",
+  "Unselect_Rows": "Unselect Rows",
   "Insert_Row_Above": "Insert Row Above",
   "Insert_Row_Below": "Insert Row Below",
   "Drag_and_drop_images_or_click_or_paste_here_to_add": "Drag and drop images or click or paste here to add",
@@ -186,9 +187,9 @@
   "Euro": "Euro",
   "Failed_to_execute_operation_on_server": "Failed to execute operation on server: ",
   "Statistics": "Statistics",
-  "Forms": "Forms",
+  "All_forms": "All Forms",
   "Create_a_new_statistic": "Create a new statistic",
-  "Add_a_new_form": "Add a new form",
+  "Create_a_new_form": "Create a new form",
   "No_forms_added": "No forms added",
   "Set_form": "Set form",
   "Create_form": "Create form",
