--- a/media/assets/frontend/locales/zh-CN/dtable.json
+++ b/media/assets/frontend/locales/zh-CN/dtable.json
@@ -9,6 +9,7 @@
   "Duplicate_Row": "复制行",
   "Delete_Row": "删除行",
   "Delete_Rows": "删除多行",
+  "Unselect_Rows": "取消选中",
   "Insert_Row_Above": "上方插入行",
   "Insert_Row_Below": "下方插入行",
   "Drag_and_drop_images_or_click_or_paste_here_to_add": "将图片拖拽或点击或粘贴到此处进行上传",
@@ -188,8 +189,8 @@
   "Statistics": "统计",
   "Create_a_new_statistic": "创建一张新的统计表",
   "Find_an_option": "查找标签",
-  "Forms": "表单",
-  "Add_a_new_form": "添加新表单",
+  "All_forms": "表单",
+  "Create_a_new_form": "创建新表单",
   "No_forms_added": "没有表单被添加",
   "No_options_available": "没有找到标签。",
   "Table": "表格",
