--- a/locale/de/LC_MESSAGES/djangojs.po
+++ b/locale/de/LC_MESSAGES/djangojs.po
@@ -23,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-23 17:01+0800\n"
-"PO-Revision-Date: 2019-12-23 09:03+0000\n"
+"POT-Creation-Date: 2019-12-26 10:21+0800\n"
+"PO-Revision-Date: 2019-12-26 02:22+0000\n"
 "Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/haiwen/seahub/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -1184,19 +1184,19 @@ msgstr "Upload-Link: "
 
 #: frontend/src/components/dialog/guide-for-new-dialog.js:23
 msgid "Welcome to {site_name_placeholder}"
-msgstr ""
+msgstr "Willkommen bei {site_name_placeholder}"
 
 #: frontend/src/components/dialog/guide-for-new-dialog.js:25
 msgid ""
 "{site_name_placeholder} organizes files into libraries. Each library can be "
 "synced and shared separately. We have created a personal library for you. "
 "You can create more libraries later."
-msgstr ""
+msgstr "{site_name_placeholder} verwaltet Dateien in Bibliotheken. Jede Bibliothek kann synchronisiert und separat freigeben werden. Wir haben hier bereits eine persönliche Bibliothek für Sie erstellt, weitere Bibliotheken können Sie nach Bedarf hinzufügen."
 
 #: frontend/src/components/dialog/guide-for-new-dialog.js:26
 msgid ""
 "{site_name_placeholder} organizes files into libraries. Each library can be "
-"synced and shared separately. Howerver, since you are a guest user now, you "
+"synced and shared separately. However, since you are a guest user now, you "
 "can not create libraries."
 msgstr ""
 
@@ -2734,7 +2734,7 @@ msgstr "Einträge pro Seite: "
 
 #: frontend/src/components/permission-denied-tip.js:6
 msgid ""
-"Permission denied. Plaese try {placeholder-left}login again.{placeholder-"
+"Permission denied. Please try {placeholder-left}login again.{placeholder-"
 "right}"
 msgstr ""
 
