--- a/locale/ru/LC_MESSAGES/djangojs.po
+++ b/locale/ru/LC_MESSAGES/djangojs.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-23 17:01+0800\n"
-"PO-Revision-Date: 2019-12-23 09:03+0000\n"
+"POT-Creation-Date: 2019-12-26 10:21+0800\n"
+"PO-Revision-Date: 2019-12-26 02:22+0000\n"
 "Last-Translator: imwhatiam <imwhatiam123@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/haiwen/seahub/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -1171,19 +1171,19 @@ msgstr "Ссылка для загрузки:"
 
 #: frontend/src/components/dialog/guide-for-new-dialog.js:23
 msgid "Welcome to {site_name_placeholder}"
-msgstr ""
+msgstr "Добро пожаловать в {site_name_placeholder}"
 
 #: frontend/src/components/dialog/guide-for-new-dialog.js:25
 msgid ""
 "{site_name_placeholder} organizes files into libraries. Each library can be "
 "synced and shared separately. We have created a personal library for you. "
 "You can create more libraries later."
-msgstr ""
+msgstr "{site_name_placeholder} организует хранение ваших файлов в библиотеках. Каждая библиотека может быть автоматически синхронизирована или отдана в общее пользование отдельно. Мы уже создали личную библиотеку для вас. Вы можете создать больше библиотек позже."
 
 #: frontend/src/components/dialog/guide-for-new-dialog.js:26
 msgid ""
 "{site_name_placeholder} organizes files into libraries. Each library can be "
-"synced and shared separately. Howerver, since you are a guest user now, you "
+"synced and shared separately. However, since you are a guest user now, you "
 "can not create libraries."
 msgstr ""
 
@@ -2721,7 +2721,7 @@ msgstr "Записей на странице:"
 
 #: frontend/src/components/permission-denied-tip.js:6
 msgid ""
-"Permission denied. Plaese try {placeholder-left}login again.{placeholder-"
+"Permission denied. Please try {placeholder-left}login again.{placeholder-"
 "right}"
 msgstr ""
 
