--- a/locale/zh_CN/LC_MESSAGES/djangojs.po
+++ b/locale/zh_CN/LC_MESSAGES/djangojs.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-23 17:01+0800\n"
-"PO-Revision-Date: 2019-12-23 09:24+0000\n"
+"POT-Creation-Date: 2019-12-26 10:21+0800\n"
+"PO-Revision-Date: 2019-12-26 02:27+0000\n"
 "Last-Translator: llj <lingjun.li1@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/haiwen/seahub/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -1194,7 +1194,7 @@ msgstr "{site_name_placeholder} 把文件组织到资料库里。每个资料库
 #: frontend/src/components/dialog/guide-for-new-dialog.js:26
 msgid ""
 "{site_name_placeholder} organizes files into libraries. Each library can be "
-"synced and shared separately. Howerver, since you are a guest user now, you "
+"synced and shared separately. However, since you are a guest user now, you "
 "can not create libraries."
 msgstr " {site_name_placeholder} 通过资料库来管理文件。每个资料库可以单独加密和共享。然而，因为您现在是访客，所以不能创建资料库。"
 
@@ -2732,7 +2732,7 @@ msgstr "每页："
 
 #: frontend/src/components/permission-denied-tip.js:6
 msgid ""
-"Permission denied. Plaese try {placeholder-left}login again.{placeholder-"
+"Permission denied. Please try {placeholder-left}login again.{placeholder-"
 "right}"
 msgstr "权限错误。请尝试 {placeholder-left}重新登录。{placeholder-right}"
 
