--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -15,9 +15,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-25 11:25+0800\n"
-"PO-Revision-Date: 2020-03-25 02:26+0000\n"
-"Last-Translator: zheng xie <xiez1989@gmail.com>\n"
+"POT-Creation-Date: 2020-03-26 10:14+0800\n"
+"PO-Revision-Date: 2020-03-25 18:33+0000\n"
+"Last-Translator: Rodolfo Cossalter <rcoss@dm.uba.ar>\n"
 "Language-Team: Spanish (http://www.transifex.com/haiwen/seahub/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1310,7 +1310,7 @@ msgstr "Error. por favor contacte al administrador."
 #: seahub/dingtalk/views.py:98
 #, python-format
 msgid "User %s not found or inactive."
-msgstr ""
+msgstr "Usuario %s no encontrado o inactivo."
 
 #: seahub/forms.py:59
 msgid "The two passwords didn't match."
