--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -25,9 +25,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seahub\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-03-25 11:25+0800\n"
-"PO-Revision-Date: 2020-03-25 02:26+0000\n"
-"Last-Translator: zheng xie <xiez1989@gmail.com>\n"
+"POT-Creation-Date: 2020-03-26 10:14+0800\n"
+"PO-Revision-Date: 2020-03-25 07:26+0000\n"
+"Last-Translator: Vladimir <pash.vld@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/haiwen/seahub/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1330,7 +1330,7 @@ msgstr "Ошибка, пожалуйста, свяжитесь с админис
 #: seahub/dingtalk/views.py:98
 #, python-format
 msgid "User %s not found or inactive."
-msgstr ""
+msgstr "Пользователь %s не найден или неактивен.."
 
 #: seahub/forms.py:59
 msgid "The two passwords didn't match."
