--- a/media/locales/fr/seafile-editor.json
+++ b/media/locales/fr/seafile-editor.json
@@ -9,15 +9,15 @@
   "header_five": "Titre 5",
   "header_six": "Titre 6",
   "paragraph": "Paragraphe",
-  "quote": "Citation",
-  "ordered_list": "Liste ordonnée",
-  "unordered_list": "Liste non ordonnée",
-  "check_list_item": "Élément liste de vérification",
-  "insert_image": "Insérer image",
+  "quote": "Blockquote",
+  "ordered_list": "Numérotation",
+  "unordered_list": "Enumeration",
+  "check_list_item": "Case à chocher",
+  "insert_image": "Image",
   "code": "Ligne de code",
   "code_block": "Bloc de code",
-  "insert_link": "Insérer lien",
-  "insert_table": "Insérer table",
+  "insert_link": "Lien",
+  "insert_table": "Tableau",
   "save": "Sauvegarder",
   "more": "Plus",
   "invalid_url": "L'adresse n'est pas valide",
@@ -29,22 +29,22 @@
   "switch_to_rich_text_editor": "Basculer en éditeur de texte riche",
   "switch_to_viewer": "Basculer en visualiseur Markdown",
   "help": "Aide",
-  "remove_table": "Supprimer la table",
+  "remove_table": "Supprimer le tableau",
   "column": "Colonne",
-  "row": "Ligne",
+  "row": "ligne",
   "set_align": "Ajuster l'alignement",
   "left": "Gauche",
   "center": "Centrer",
   "right": "Droite",
-  "file_saved": "Fichier sauvegardé.",
+  "file_saved": "Fichier a été sauvegardé.",
   "file_failed_to_save": "Échec de la sauvegarde du fichier",
-  "star": "Ajouter étoile",
-  "unstar": "Enlever étoile",
+  "star": "Ajouter à favoris",
+  "unstar": "Enlever des favoris",
   "back_to_parent_directory":"Retour au répertoire parent",
-  "edit":"éditer",
+  "edit": "Modifier",
   "copy": "Copier",
   "copied": "Copié",
-  "internal_link": "Lien interne",
+  "internal_link": "Afficher le lien interne",
   "copy_internal_link": "Le lien interne a été copié dans le presse-papier",
   "internal_link_desc": "Un lien interne est un lien vers un fichier ou un dossier accessible en lecture par un utilisateur.",
   "share": "Partager",
@@ -81,27 +81,40 @@
   "you_have_an_unsaved_draft_do_you_like_to_use_it": "Vous avez un brouillon qui n'est pas sauvé. Voulez-vous l'utiliser ?",
   "local_draft_saved": "Brouillon local sauvegardé",
   "new_draft": "Nouveau brouillon",
-  "edit_draft": "Éditer brouillon",
+  "view_draft": "Voir le brouillon",
+  "publish": "Publier",
   "this_file_has_a_draft": "Ce fichier possède un brouillon.", 
   "delete": "Supprimer",
   "comments": "Commentaires",
-  "add_a_comment": "Ajouter un commentaire ...",
-  "no_comment_yet": "Pas encore de commentaire.",
-  "Mark_as_Resolved": "Marqué comme résolu",
+  "add_a_comment": "Ajouter un commentaire",
+  "no_comment_yet": "Aucun commentaire disponible",
+  "mark_as_resolved": "Marqué comme résolu",
   "ask_for_review": "Demande d'un avis",
   "review_already_exists": "Un avis existe déjà",
   "view_review": "Voir l'avis",
-  "there_is_an_associated_review_with_this_file": "Il y a un avis associé à ce fichier",
+  "there_is_an_associated_review_with_this_file": "Il y a un avis associé à ce fichier.",
   "start_review": "Commencer l'avis",
-  "this_file_is_in_draft_stage": "Ce fichier est à l'état de brouillon",
-  "this_file_is_in_review_stage": "Ce fichier est à l'état d'avis",
-  "this_file_has_been_updated": "Ce fichier à bien été mis à jour.",
+  "this_file_is_in_draft_stage": "Ce fichier est à l'état de brouillon.",
+  "this_file_is_in_review_stage": "Ce fichier est à l'état d'avis.",
+  "this_file_has_been_updated": "Ce fichier à été mis à jour.",
   "refresh": "Rafraichir",
   "related_files": "Fichiers relatifs",
   "related_file": "Fichier relatif",
   "no_tags": "Pas de tag",
   "no_related_files": "Aucun fichier relatif",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
+  "no_out_line": "Pas de contour",
+  "Please_use_Chrome_to_get_best_editing_experience": "Veuillez utiliser Chrome pour la meilleure expérience d'édition.",
+  "no_document_improvement_suggestion": "Aucune proposition pour améliorer le document",
+  "markdownLint": {
+    "missing_h1": {
+      "description": "Il n'y a pas de h1 dans le document",
+      "issue" : "h1 manquant"
+    },
+    "heading_end_with_colon": {
+      "description": "La ponctuation qui suit l'en-tête ne devrait pas être une colonne.",
+      "issue": "Fin du titre largeur de colonne"
+    }
+  },
   "userHelp": {
     "title": "Raccourcis clavier",
     "userHelpData": [
