--- a/media/locales/ru/seafile-editor.json
+++ b/media/locales/ru/seafile-editor.json
@@ -41,7 +41,7 @@
   "star": "Добавить пометку",
   "unstar": "Удалить пометку",
   "back_to_parent_directory":"Вернуться в родительский каталог",
-  "edit":"изменить",
+  "edit": "Редактировать",
   "copy": "Копировать",
   "copied": "Скопировано",
   "internal_link": "Внутренняя ссылка",
@@ -81,13 +81,14 @@
   "you_have_an_unsaved_draft_do_you_like_to_use_it": "У вас есть несохраненный черновик. Хотите использовать его?",
   "local_draft_saved": "Локальный черновик сохранен",
   "new_draft": "Новый черновик",
-  "edit_draft": "Изменить черновик",
+  "view_draft": "Просмотр черновика",
+  "publish": "Опубликовать",
   "this_file_has_a_draft": "Этот файл имеет черновик.", 
   "delete": "Удалить",
   "comments": "Комментарии",
   "add_a_comment": "Добавить комментарий...",
   "no_comment_yet": "Комментариев пока нет.",
-  "Mark_as_Resolved": "Отметить как разрешенный",
+  "mark_as_resolved": "Отметить как разрешенный",
   "ask_for_review": "Спросить отзыв",
   "review_already_exists": "Отзыв уже существует",
   "view_review": "Просмотр отзыва",
@@ -101,7 +102,19 @@
   "related_file": "связанный файл",
   "no_tags": "Нет тегов",
   "no_related_files": "Нет связанных файлов",
-  "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "",
+  "no_out_line": "Нет контура",
+  "Please_use_Chrome_to_get_best_editing_experience": "Пожалуйста, используйте Chrome, чтобы получить лучший опыт редактирования.",
+  "no_document_improvement_suggestion": "Нет предложений по улучшению документа",
+  "markdownLint": {
+    "missing_h1": {
+      "description": "В документе нет h1",
+      "issue" : "Отсутствует h1"
+    },
+    "heading_end_with_colon": {
+      "description": "Завершающая пунктуация в заголовке не должна быть двоеточием.",
+      "issue": "Заголовок заканчивается двоеточием"
+    }
+  },
   "userHelp": {
     "title": "Горячие клавиши",
     "userHelpData": [
